# object_detection_cpp

face_deleation/: CMakeLists.txt  README.md  yolov3_image_detection.cpp
ssd_face_detection/: CMakeLists.txt  README.md
yolov3_object_detection/: CMakeLists.txt  README.md
